# CineReserve

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_alter_session_movie.py
reservations/: admin.py  models.py  serializers.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_ticket.py
